; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/quartz/extr_waveparser.c_WAVEParser_create.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/quartz/extr_waveparser.c_WAVEParser_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"(%p, %p)\0A\00", align 1
@CLASS_E_NOAGGREGATION = common dso_local global i32 0, align 4
@WAVEParser_Vtbl = common dso_local global i32 0, align 4
@CLSID_WAVEParser = common dso_local global i32 0, align 4
@WAVEParser_Sample = common dso_local global i32 0, align 4
@WAVEParser_QueryAccept = common dso_local global i32 0, align 4
@WAVEParser_InputPin_PreConnect = common dso_local global i32 0, align 4
@WAVEParser_Cleanup = common dso_local global i32 0, align 4
@WAVEParser_disconnect = common dso_local global i32 0, align 4
@WAVEParser_first_request = common dso_local global i32 0, align 4
@WAVEParserImpl_seek = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @WAVEParser_create(i32* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32**, i32*** %5, align 8
  %10 = call i32 @TRACE(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32* %8, i32** %9)
  %11 = load i32**, i32*** %5, align 8
  store i32* null, i32** %11, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @CLASS_E_NOAGGREGATION, align 4
  store i32 %15, i32* %3, align 4
  br label %40

16:                                               ; preds = %2
  %17 = call %struct.TYPE_6__* @CoTaskMemAlloc(i32 4)
  store %struct.TYPE_6__* %17, %struct.TYPE_6__** %7, align 8
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %20 = load i32, i32* @WAVEParser_Sample, align 4
  %21 = load i32, i32* @WAVEParser_QueryAccept, align 4
  %22 = load i32, i32* @WAVEParser_InputPin_PreConnect, align 4
  %23 = load i32, i32* @WAVEParser_Cleanup, align 4
  %24 = load i32, i32* @WAVEParser_disconnect, align 4
  %25 = load i32, i32* @WAVEParser_first_request, align 4
  %26 = load i32, i32* @WAVEParserImpl_seek, align 4
  %27 = call i32 @Parser_Create(%struct.TYPE_7__* %19, i32* @WAVEParser_Vtbl, i32* @CLSID_WAVEParser, i32 %20, i32 %21, i32 %22, i32 %23, i32 %24, i32 %25, i32* null, i32* null, i32 %26, i32* null)
  store i32 %27, i32* %6, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i64 @FAILED(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %16
  %32 = load i32, i32* %6, align 4
  store i32 %32, i32* %3, align 4
  br label %40

33:                                               ; preds = %16
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 0
  %38 = load i32**, i32*** %5, align 8
  store i32* %37, i32** %38, align 8
  %39 = load i32, i32* %6, align 4
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %33, %31, %14
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @TRACE(i8*, i32*, i32**) #1

declare dso_local %struct.TYPE_6__* @CoTaskMemAlloc(i32) #1

declare dso_local i32 @Parser_Create(%struct.TYPE_7__*, i32*, i32*, i32, i32, i32, i32, i32, i32, i32*, i32*, i32, i32*) #1

declare dso_local i64 @FAILED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
